--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.4",
+    "reac": "^0.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-router": "^6.25.1",
+    "react-router-dom": "^6.25.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
