--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.4",
+    "formik": "^2.4.6",
     "reac": "^0.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
