--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
