--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
