--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,7 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment variable files
+.env
+.env.*
+
+# Node modules
 node_modules
+
+# Build output
 dist
 dist-ssr
 *.local
@@ -22,4 +29,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-*.env
