--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
