--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.4",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "jquery": "^3.7.1",
     "reac": "^0.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
