--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -1,10 +1,14 @@
 {
-    "setupFilesAfterEnv": [
-        "<rootDir>/src/test/setupTests.js"
-    ],
-    "testEnvironment": "jest-environment-jsdom",
-    "moduleNameMapper": {
-        "\\.(gif|ttf|eot|svg|png)$": "<rootDir>/src/test/fileMock.js",
-        "\\.(css|less)$": "identity-obj-proxy"
-    }
+  "setupFilesAfterEnv": [
+    "<rootDir>/src/test/setupTests.js",
+    "<rootDir>/jest-setup-env.js"
+  ],
+  "testEnvironment": "jest-environment-jsdom",
+  "moduleNameMapper": {
+    "\\.(gif|ttf|eot|svg|png)$": "<rootDir>/src/test/fileMock.js",
+    "\\.(css|less)$": "identity-obj-proxy"
+  },
+  "transformIgnorePatterns": [
+    "node_modules/(?!(@babel/runtime|react-router-dom|@testing-library/react|react|react-dom)/)"
+  ]
 }
